<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/glass_card"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="Login Icon"
            android:src="@drawable/icon_account_circle"
            app:tint="#452879"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/title_register"
            android:textAlignment="center"
            android:textColor="#051256"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_email"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_password"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_confirm_password"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:backgroundTint="#502677"
            android:padding="14dp"
            android:text="@string/btn_register"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/link_login"
            android:textColor="#1B0345"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>