<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/glass_card"
    android:gravity="top|center_horizontal"
    android:paddingTop="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="704dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_title"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="#051256"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/reset_password_sub"
            android:textAlignment="center"
            android:textColor="#1B0345"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reset_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/reset_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#53308A"
            android:padding="14dp"
            android:text="@string/btn_send_reset"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/back_to_login"
            android:textColor="#1B0345"
            android:textStyle="bold" />
        <ProgressBar
            android:id="@+id/reset_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />

    </LinearLayout>
</RelativeLayout>